--- a/src/assets/style/global.sass
+++ b/src/assets/style/global.sass
@@ -13,6 +13,7 @@ html, body
   width: 100%
   height: 100%
   margin: 0
+  scroll-behavior: smooth
 
 figure, figcaption
   margin: 0
@@ -64,6 +65,10 @@ p
 
   .header
     margin-top: 100px
+
+    .badge
+      font-size: 17px
+      font-weight: bold
     
     .title
       font-size: 26px
