fix: Do not add margin to nested lists

--- a/src/assets/style/global.sass
+++ b/src/assets/style/global.sass
@@ -112,7 +112,10 @@ p
     list-style-position: inside
 
   li
-    margin: .5em 0
+    margin: .3em 0
+
+    ul, ol
+      margin: 0
 
   blockquote
     background-color: #efefef
