--- a/src/assets/style/global.sass
+++ b/src/assets/style/global.sass
@@ -89,7 +89,7 @@ p
   line-height: 1.8em
 
   .image-box, .youtube-embed
-    margin: 60px auto
+    margin: 40px auto
 
     @include rmq()
       margin: 30px 0
@@ -103,8 +103,12 @@ p
       width: calc(100vw - 25px * 2)
 
   h2
-    margin-top: 60px
+    margin-top: 90px
     font-size: 1.5em
+
+  h3
+    margin-top: 60px
+    font-size: 1.2em
 
   & > ul, & > ol
     margin: 30px auto
