fix: Apply max-width to all root element of content

--- a/src/assets/style/global.sass
+++ b/src/assets/style/global.sass
@@ -89,46 +89,52 @@ p
   font-size: 14px
   line-height: 1.8em
 
-  .image-box, .youtube-embed
-    margin: 40px auto
 
-    @include rmq()
-      margin: 30px 0
+  .content-root
+    &>*
+      width: calc(100vw - 50px * 2)
+      max-width: 700px
+      margin: 15px auto
 
-  p, h2, h3, h4, ul, ol, table
-    width: calc(100vw - 50px * 2)
-    max-width: 700px
-    margin: 15px auto
+      @include rmq()
+        width: calc(100vw - 25px * 2)
 
-    @include rmq()
-      width: calc(100vw - 25px * 2)
+      &:has(.image-box, .youtube-embed)
+        width: 100%
+        max-width: none
 
-  h2
-    margin-top: 90px
-    font-size: 1.5em
+    .image-box, .youtube-embed
+      margin: 40px auto
 
-  h3
-    margin-top: 60px
-    font-size: 1.2em
+      @include rmq()
+        margin: 30px 0
 
-  & > ul, & > ol
-    margin: 30px auto
-    padding: 0
-    list-style-position: inside
+    h2
+      margin-top: 90px
+      font-size: 1.5em
 
-  li
-    margin: .3em 0
+    h3
+      margin-top: 60px
+      font-size: 1.2em
 
-    ul, ol
-      margin: 0
+    & > ul, & > ol
+      margin: 30px auto
+      padding: 0
+      list-style-position: inside
 
-  blockquote
-    background-color: #efefef
-    margin: 30px 50px
-    padding: 20px 30px
+    li
+      margin: .3em 0
 
-    @include rmq()
-      margin: 30px 25px
+      ul, ol
+        margin: 0
 
-    *
-      max-width: 100%
+    blockquote
+      background-color: #efefef
+      margin: 30px 50px
+      padding: 20px 30px
+
+      @include rmq()
+        margin: 30px 25px
+
+      *
+        max-width: 100%
